--- a/style.css
+++ b/style.css
@@ -840,7 +840,18 @@ body a:hover {
         opacity: 0
     }
 }
-
+.flip-clock-wrapper{
+    margin:1em 0;
+}
+.flip-clock-divider .flip-clock-label{
+    right: -68px;
+}
+.flip-clock-divider.minutes .flip-clock-label {
+    right: -56px;
+}
+.flip-clock-divider.seconds .flip-clock-label {
+    right: -55px;
+}
 
 .review-banner h2, .review-banner p{
     color: #c7b24c;
@@ -1250,8 +1261,34 @@ input[type=number] {
     align-items: center;
 }
 
+/* index about collapse sec */
+.show-more-btn{
+    color: white;
+}
+.btn-primary:focus, .btn-primary:active{
+    background-color: #ba9d4d;
+}
+.btn-primary:hover,.btn-primary:focus,.btn-primary:active{
+    box-shadow: none;
+}
+
+[aria-expanded="false"] > .expanded,
+[aria-expanded="true"] > .collapsed {
+  display: none;
+}
 
 
+
+
+
+@media only screen and (max-width: 1082px){
+    .flip-clock-wrapper{
+        justify-content: center;
+    }
+    .time-left{
+        padding: 10px 0;
+    }
+}
 @media only screen and (max-width: 700px){
     .blockWidth:nth-child(1)::after{
         display: none;
@@ -1268,5 +1305,8 @@ input[type=number] {
     .advntges{
         display: flex;
         flex-direction: column;
+    }
+    .flip-clock-wrapper ul{
+        width: 26px;
     }
 }
