--- a/style.css
+++ b/style.css
@@ -1385,6 +1385,7 @@ input[type=number] {
     background: #ba9d4d;
     color: white;
     padding: 8px 20px;
+    white-space: nowrap;
 }
 
 .cart-page a:hover{
@@ -1442,6 +1443,9 @@ input[type=number] {
 #mb-open{
     cursor: pointer;
 }
+.advntges.gap-2 {
+    gap: 1.5rem !important;
+}
 
 
 @media only screen and (max-width: 1082px){
@@ -1479,6 +1483,9 @@ input[type=number] {
     .my-slider .slick-slide img{
         object-fit: fill;
     }
+    .cart-page a{
+        padding: 8px;
+    }
 }
 
 @media only screen and (max-width: 700px){
@@ -1513,5 +1520,9 @@ input[type=number] {
     }
     .slider-container{
         height: 250px;
+    }
+    .cart-page a {
+        padding: 8px;
+        height: fit-content;
     }
 }
